--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "module": "ESNext",
+    "target": "es2016",
+    "module": "CommonJS",
     "rootDir": "./src",
     "outDir": "./dist",
     "moduleResolution": "node",
