--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,9 @@ inputs:
   commit-sha:
     description: "The commit sha to apply the annotations to."
 
+branding:
+  icon: alert-triangle
+
 runs:
   using: "node16"
   main: "dist/index.js"
